Fix img overflow on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,3 +56,7 @@ body {
 #bottom-link {
   color:  #41354D;
 }
+
+.animate {
+  max-width: 70vw;
+}
